# soccer-forecastinghhh

./: .gitignore  Dockerfile  README.md  main.py  main_parallel.py  requirements.txt  sim_parallel.py  utils.py  x-api.py
.github/workflows/: build.yml
pipeline/: database_config.yaml  fotmob.py  sim.py
src/: utils.py  x-api.py
src/pipeline/: fotmob.py  sim.py
src/rust_simulation/: Cargo.toml
src/rust_simulation/src/: api_client.rs  lib.rs  main.rs  models.rs
