[package]
name = "rust_simulation"
version = "0.1.0"
edition = "2021"



[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
polars = { version = "0.43.1", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime"] }
